# Roscoe

./: # GRAPH_RECURSION_LIMIT.md  # LangSmith Fetch.md  .dockerignore  .gitignore  .mcp.json  Alma Cristobal traces.yaml  CLAUDE.md  CLAUDE_GRAPH.md  COMPLETE-ARCHITECTURE.md  COMPLETE_SESSION_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  DOCKER.md  Dockerfile  FINAL_FIXES_COMPLETE.md  GRAPH_STATE_COMPUTER_UPDATES.md  GRAPH_TOOLS_ARCHITECTURE_COMPLETE.md  Got it.ini  Here is Claude's plan.md  KEYS  KNOWLEDGE_GRAPH_SCHEMA.md  LANGGRAPH_CLOUD_SETUP.md  PDF_CONVERSION_README.md  PHASE_6_7_8_GRAPH_MIGRATION_SUMMARY.md  PROMPT_UPDATES_SUMMARY.md  QUICKSTART.md  QUICK_START.txt  README-monitor.md  README.md  RENDER_DEPLOYMENT.md  Roscoe.code-workspace  SESSION_COMPLETE_GRAPH_MIGRATION.md  SKILLS_REORGANIZED_FINAL.md  SKILL_CREATION_REFERENCE.md  SKILL_REVIEW_ANALYSIS.md  SYNC_INSTRUCTIONS.md  TELEGRAM_BOT_README.md  TOOLS_QUERIES_README.md  WORKFLOW_GRAPH_MIGRATION_COMPLETE.md  WORKFLOW_MIGRATION_EXAMPLES.md  (+48 more)
.archive/: ABBY_SITGRAVES_GRAPH_ACTIONS.md  ABBY_SITGRAVES_MANUAL_CORRECTIONS.md  ALL_EPISODE_FILES_UPDATED.md  AMY_MILLS_ALL_CHANGES_COMPLETE.md  AMY_MILLS_CHANGES_APPLIED.md  AMY_MILLS_DOCTOR_RESEARCH_RESULTS.md  AMY_MILLS_FINAL_STATE.md  AMY_MILLS_MANUAL_CORRECTIONS.md  ANNOTATION_PROCESSING_CHANGES.md  APPROVED_REVIEWS_PROTECTION.md  AZAIRE_BRENDA_ENTITIES_ADDED.md  BROOKLYN_TO_CHRISTOPHER_BATCH_COMPLETE.md  CHI-1.md  CHI-2.md  CHI-3.md  CHI-4.md  CHI-5.md  CHI-6.md  CHI-7.md  CHI-8.md  CHI-9.md  CLEAN_SLATE_PROVIDER_APPROACH.md  CORRECTED_MANUAL_CHANGES.md  COURT_PERSONNEL_ENTITY_TYPES.md  DIVISION_ENTITY_STRUCTURE.md  ENTITY_COMPARISON_Abby-Sitgraves.md  ENTITY_MAPPING_Abby-Sitgraves.md  EPISODE_ENTITY_MAPPING_NEEDED.md  EPISODE_NAME_MAPPING_PLAN.md  EPISODE_REVIEW_UPDATE_COMPLETE.md  FACILITY_BASED_STRUCTURE_PROPOSAL.md  GRAPHITI_TECHNICAL_DEEP_DIVE.md  GRAPH_ACTION_PLAN_Abby-Sitgraves.md  GRAPH_INGESTION_COMPLETE.md  GRAPH_PROCESS_CLARIFICATION.md  GRAPH_SCHEMA.md  GRAPH_SCHEMA_ACTUAL.md  GRAPH_SCHEMA_COMPLETE.md  GRAPH_STATUS_COMPARISON.md  Graph-Schema-comments.md  (+73 more)
.claude/: CLAUDE.md  claude-old.md  deployment.md  graph.md  langgraph-mcp.json  progress.json  progress.txt  sandbox-solution-1.md  sandbox-solution-2.md  sandbox-solution-3.md  sandbox-solution-4.md  sandbox-solution-5.md  sandbox-solution-6.md  tools.md  troubleshooting.md  workflow.md
Roscoe_runtime/: Untitled
Roscoe_training/: # Workflow: Client Intake & Screening.md  tools-manifest.json
archive/: README.md
deep_agent_coder/: __init__.py  __main__.py  agent.py  cli.py  prompts.py  subagents.py
deepagents/: .env.example  .gitignore  AUDIO_README.md  DEPLOYMENT.md  MIGRATION.md  langgraph.json  play_latest.sh  requirements.txt  vrsen-mcp-code-exec-agent-8a5edab282632443.txt
deploy/: docker-compose-copilotkit.yml
docker/: docker-compose.graphiti.yml
docs/: # Agent harness capabilities.md  # CopilotKit v1.md  GENERATIVE_UI_PLAN.md  GENERATIVE_UI_STRATEGY_AND_COMPARISON.md  IMPLEMENTATION_PLAN_Script_Execution.md  IMPLEMENTATION_PLAN_TASK_RUNNER.md  ROSCOE_UI_ARCHITECTURE.md  SCRIPT_EXECUTION.md  UI_INTEGRATION_STATUS.md  WORKFLOW-PROMPT.md  final-claude-opus-4-5.md  final-claude-sonnet-4.5.md  final-gemini-3-pro-preview.md  (+4 more)
production-vm-code/: CLAUDE.md  FINAL_DIAGNOSIS.md  LIBREOFFICE_SETUP.md  README.md  UI_STREAMING_FIX_PROGRESS.md  UI_STREAMING_FREEZE_DEBUG.md  WORKFLOW_ENGINE_INTEGRATION.md  docker-compose.yml  langgraph.json  pyproject.toml  test_word_template_pipeline.py
production-vm-code/docs/: COPILOTKIT_ARCHITECTURE.md
production-vm-code/docs/testing/: copilotkit-integration-test.md
production-vm-code/src/roscoe/: copilotkit_server.py  upload_service.py
production-vm-code/src/roscoe/Deprecated/: Persistence.md
production-vm-code/src/roscoe/agents/coding/: tools.py
production-vm-code/src/roscoe/agents/paralegal/: THESYS-MODEL  agent.py  models.py  script_executor.py  tools.py  word_template_pipeline.py
production-vm-code/src/roscoe/core/: case_context_middleware.py  case_state_store.py  google_auth.py  test_chunk_injection.py  workflow_state_computer.py
production-vm-code/src/roscoe/workflow_engine/: __init__.py
production-vm-code/src/roscoe/workflow_engine/_adapters/: __init__.py  case_data.py
production-vm-code/src/roscoe/workflow_engine/orchestrator/: __init__.py  state_machine.py
production-vm-code/src/roscoe/workflow_engine/schemas/: derivation_rules.json  flowchart TD.md  phase_definitions.json  workflow_definitions.json
production-vm-code/src/roscoe/workflow_engine/scripts/: __init__.py  migrate_case_states.py
production-vm-code/src/roscoe/workflow_engine/templates/: new_case_state.json  response_templates.md
production-vm-code/ui/: # DevTools.md  # Intelligent Components.js  # makeAssistantTool.js  # makeAssistantToolUI.js  .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json
production-vm-code/ui/app/: assistant.tsx  assistant.tsx.old  page.tsx  workbench.tsx
production-vm-code/ui/app/api/[..._path]/: route.ts
production-vm-code/ui/app/api/copilotkit/: route.ts
production-vm-code/ui/app/api/workspace/file/: route.ts
production-vm-code/ui/app/api/workspace/list/: route.ts
production-vm-code/ui/app/calendar-frame/: page.tsx  ui.tsx
production-vm-code/ui/app/monaco-frame/: page.tsx  ui.tsx
production-vm-code/ui/components/artifacts/: artifact-canvas.tsx  index.ts  insurance-card.tsx
production-vm-code/ui/components/assistant-ui/: thread.tsx  tool-fallback.tsx
production-vm-code/ui/components/tools/: list-events-tool.tsx  render-calendar-tool.tsx  render-ui-script-tool.tsx  search-emails-tool.tsx
production-vm-code/ui/components/workbench/: document-viewer.tsx  file-browser.tsx
production-vm-code/ui/lib/: chatApi.ts  copilotkit-artifact-tools.test-manual.md  copilotkit-artifact-tools.tsx  copilotkit-workspace-tools.tsx  customLangGraphRuntime.ts  useCustomLangGraphRuntime.tsx  workbench-store.ts
production-vm-code/ui/lib/__tests__/: copilotkit-artifact-tools.test.tsx
(+3308 files in other folders)
