[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roscoe"
version = "0.1.0"
description = "Dynamic Skills-Based Paralegal AI Agent"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "langchain",
    "langgraph",
    "langgraph-cli[inmem]",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-community",
    "langchain-experimental",
    "tavily-python",
    "sentence-transformers",
    "pdfplumber",
    "PyPDF2",
    "pandas",
    "numpy",
    "slack-sdk",
    "slack-bolt",
    "python-dotenv",
    "docker==7.0.0",
    "urllib3<2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["roscoe", "roscoe.core", "roscoe.agents", "roscoe.agents.paralegal", "roscoe.agents.coding"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]
