[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roscoe"
version = "0.1.0"
description = "Dynamic Skills-Based Paralegal AI Agent"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.0",
    "langchain",
    "langgraph",
    "langgraph-cli[inmem]",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-community",
    "langchain-experimental",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "tavily-python",
    "sentence-transformers",
    "pdfplumber",
    "PyPDF2",
    "pandas",
    "numpy",
    "slack-sdk",
    "slack-bolt",
    "python-dotenv",
    "docker>=7.0.0",
    "rapidfuzz",  # Fuzzy string matching for case context middleware
    "openai",      # OpenAI SDK (used for Thesys C1 API)
    # Google OAuth + API client for Gmail and Calendar
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    # Word document template filling and PDF generation
    "python-docx>=1.1.0",  # Read/write .docx files
    "docxtpl>=0.18.0",     # Jinja2 template filling for .docx
    # CopilotKit for UI integration (copilotkit pins ag-ui-langgraph version)
    "copilotkit>=0.1.73",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "roscoe",
    "roscoe.core",
    "roscoe.agents",
    "roscoe.agents.paralegal",
    "roscoe.agents.coding",
    "roscoe.workflow_engine",
    "roscoe.workflow_engine.orchestrator",
    "roscoe.workflow_engine._adapters",
    "roscoe.workflow_engine.scripts"
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]
